.kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-crud
  template:
    metadata:
      labels:
        app: user-crud
    spec:
      containers:
        - name: user-crud
          image: mazurenkoaa/user-crud:1.0
          ports:
            - containerPort: 8000
          command: ['uvicorn', 'src.main:app', '--host', '0.0.0.0', '--port', '8000']
