.kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-crud
spec:
  selector:
    app: user-crud
  ports:
    - protocol: TCP
      port: 8000
