.kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-crud
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-crud
            port:
              number: 8000
  ingressClassName: nginx
